# AdaptiveVision

./: .gitignore  .gitignore~  README.md  configure.ac  notes.txt  rebuild  stereo_detect  stereo_detect.cpp  test.cpp
Paper/Figures/: ClientThreading.odg  ServerThreading.odg
classes/: cameraCapture.h  cameraDetect.cpp  cameraDetect.h  makefile  resultType.h  test  test.cpp
classes/new/: cameraDetect.cpp  cameraDetect.h  test.cpp
classes/new2/: cameraDetect.cpp  cameraDetect.h
classes/socket/: OpCode.cpp  OpCode.h  b.out  client  client.cpp  lcrs@172.27.41.128  makefile  server  server.cpp  test  test.cpp
parallel/: makefile  stereo_detect_parallel  stereo_detect_parallel.cpp
src/: ActionCode.cpp  ActionCode.h  CameraDetect.cpp  Canvas.cpp  Canvas.h  Compressor.cpp  Compressor.h  Decompressor.cpp  Decompressor.h  Histogram.cpp  Histogram.cpp.old  Histogram.h  Makefile.am  Match.cpp  Match.h  MatchHSV.cpp  MatchHSV.h  MatchMSER.cpp  MatchMSER.h  Message.cpp  Message.h  MessageCompress.cpp  MessageCompress.h  MessageError.cpp  MessageError.h  MessageOpCode.cpp  MessageOpCode.h  MessageQueue.cpp  MessageQueue.h  MessageStack.cpp  MessageStack.h  MessageType.cpp  MessageType.h  ObjectIdentification.cpp  ObjectIdentification.h  OpCode.h  PID.h  Sample.cpp  Sample.h  Template.cpp  (+14 more)
src/test/: compp.txt  compress.py  compressor  compressor.cpp  compressor2  compressor2.cpp  declarations.h  hft.cpp  hft2.cpp  hft3.cpp  hft4.cpp  inputT.txt  main.cpp  mser.cpp  test  test1.cpp  test1.py  test11.cpp  test12.cpp  test13.cpp  test14.cpp  test15.cpp  test16.cpp  test17.cpp  test18.cpp  test19.cpp  test2.cpp  test3.cpp  test4.cpp  test5.cpp  test6.cpp  test7.cpp  test8.cpp  test9.cpp  testARG.cpp  testDist.cpp  testHSV.cpp  testHist.cpp  testHistReturn.cpp  testTHR.cpp  (+3 more)
test/: stereo_detect_parallel.cpp
